Changes made from the "0.7.0" release to the "0.8.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:

- Fixed bug #1987563 (Kerning does not work when GLC_GL_OBJECTS is enabled)
  Thanks to GenPFault for the bug report.
- Fixed bug #2012579 (Mac OSX Leopard compiling bug) - Thanks to Michael Strobel
  and Tim Baumgartner for the bug report and the patch.
- Fixed bug #1980982 (Checks for MinGW in the configure script are incomplete)
- Feature request #1947346 : added files for pkg-config (thanks to Giel
  van Shijndel and Dennis Schridde for providing them)
- Fixed bug #1947464 (Warnings are generated when compiling with gcc option
  -Wstrict-prototypes)
- Added backface culling to the extruded rendering mode
- Extrusion and GLC_TRIANGLE mode now uses VBOs whenever the gfx card supports
  them.
- Negative values passed to glcResolution() now raise GLC_PARAMETER_ERROR
- Simplified a bit the internal management of the resolution
- Added padding for GLC_TEXTURE rendering mode so that the antialiasing is not
  jeopardized when a glyph touches the border of the texture.
- Fixed bug #1935557 (Fonts are not rendered correctly when the resolution is
  changed using glcResolution).
- The configure script now exports a summary of the parameters values
- Replaced glPush/PopClientAttrib() for vertex arrays and VBOs by explicit
  save/restore management in order to improve speed.
- GLEW thread-safe support for multiple rendering contexts is now an option of
  the build process. It is disabled by default in order to use the standard
  system library (and eventually to improve speed).
- Fixed the bugs #1852883 and #1890660 (VBOs had an erratic behaviour on some
  Mac OS X platforms and Intel X3100 gfx cards under Linux).
- Removed the workaround for bug #1852883

Changes made from the "0.6.5" release to the "0.7.0" release:
-------------------------------------------------------------

* Bertrand Coconnier:
